Added basics of docker, not working yet

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  host: db
+  username: postgres
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -17,5 +19,3 @@ test:
 
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
-  pool: <%= ENV["DB_POOL"] || ENV['MAX_THREADS'] || 5 %>
