--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,6 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
-  username: postgres
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -19,3 +17,7 @@ test:
 
 production:
   <<: *default
+  encoding: utf8
+  database: orion_production
+  username: <%= ENV['APPNAME_DATABASE_USER'] %>
+  password: <%= ENV['APPNAME_DATABASE_PASSWORD'] %>
