--- a/test/fixtures/advertisers.yml
+++ b/test/fixtures/advertisers.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  company_name: MyString
+  name: MyString
   website: MyString
   user_id: 1
   logo_url: MyString
 
 two:
-  company_name: MyString
+  name: MyString
   website: MyString
   user_id: 1
   logo_url: MyString
