--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ yarn-debug.log*
 .yarn-integrity
 
 # Ignore application configuration
+# Ignore master key for decrypting credentials and more.
+/config/master.key
 /config/application.yml
 
 .rubocop.yml
@@ -45,3 +47,5 @@ yarn-debug.log*
 
 # Ignore data dump
 dump.rdb
+
+yarn.lock
