Setup Rails 6 Cred

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
-/config/credentials.yml.enc
+/config/credentials/development.key
+/config/credentials/production.key
 
 /public/packs
 /public/packs-test
