--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "orion",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.12.5",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
     "jquery": "3.4.1",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-on-rails": "12.0.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
