--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown-tree-select": "^2.5.1",
     "react-on-rails": "12.0.4",
     "turbolinks": "^5.2.0"
   },
