--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "antd": "^4.8.4",
+    "axios": "^0.21.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
     "jquery": "3.4.1",
@@ -14,7 +16,6 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-dropdown-tree-select": "^2.5.1",
     "react-on-rails": "12.0.4",
     "turbolinks": "^5.2.0"
   },
