--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-numeric-input": "^2.2.3",
     "react-on-rails": "12.0.4",
     "turbolinks": "^5.2.0"
   },
