--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
     "jquery": "3.4.1",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-numeric-input": "^2.2.3",
     "react-on-rails": "12.0.4",
+    "react-select": "^3.1.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
