--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,13 +1,21 @@
 {
-  "application.js": "/packs/js/application-f1477e936cbce760688b.js",
-  "application.js.map": "/packs/js/application-f1477e936cbce760688b.js.map",
+  "application.css": "/packs/css/application-4730111e.css",
+  "application.css.map": "/packs/css/application-4730111e.css.map",
+  "application.js": "/packs/js/application-efb746fd3826225c97c5.js",
+  "application.js.map": "/packs/js/application-efb746fd3826225c97c5.js.map",
   "entrypoints": {
     "application": {
+      "css": [
+        "/packs/css/application-4730111e.css"
+      ],
       "js": [
-        "/packs/js/application-f1477e936cbce760688b.js"
+        "/packs/js/application-efb746fd3826225c97c5.js"
+      ],
+      "css.map": [
+        "/packs/css/application-4730111e.css.map"
       ],
       "js.map": [
-        "/packs/js/application-f1477e936cbce760688b.js.map"
+        "/packs/js/application-efb746fd3826225c97c5.js.map"
       ]
     }
   }
