--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "axios": "^0.21.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
-    "jquery": "3.4.1",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-datepicker": "^3.3.0",
     "react-dnd": "^13.1.1",
     "react-dnd-html5-backend": "^12.1.1",
