Completed campaign view

--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -18,5 +18,7 @@
         "/packs/js/application-3d6da342218942cc1d2f.js.map"
       ]
     }
-  }
+  },
+  "media/images/affinities-card.svg": "/packs/media/images/affinities-card-47e24f67.svg",
+  "media/images/geography-campaign.svg": "/packs/media/images/geography-campaign-1914e274.svg"
 }
