--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-numeric-input": "^2.2.3",
     "react-on-rails": "12.0.4",
     "react-select": "^3.1.1",
+    "react-simple-tabs-component": "^1.0.7",
     "react-simple-tree-menu": "^1.1.18",
     "react-tagsinput": "^3.19.0",
     "turbolinks": "^5.2.0"
