--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,14 +1,14 @@
 {
-  "application.js": "/packs/js/application-366b8558ff448ca1eff6.js",
-  "application.js.map": "/packs/js/application-366b8558ff448ca1eff6.js.map",
+  "application.css": "/packs/css/application-8c2c96f4.css",
+  "application.css.map": "/packs/css/application-8c2c96f4.css.map",
+  "application.js": "/packs/js/application-d823ee45e18ca6648931.js",
+  "application.js.map": "/packs/js/application-d823ee45e18ca6648931.js.map",
   "entrypoints": {
     "application": {
-      "js": [
-        "/packs/js/application-366b8558ff448ca1eff6.js"
-      ],
-      "js.map": [
-        "/packs/js/application-366b8558ff448ca1eff6.js.map"
-      ]
+      "css": ["/packs/css/application-8c2c96f4.css"],
+      "js": ["/packs/js/application-d823ee45e18ca6648931.js"],
+      "css.map": ["/packs/css/application-8c2c96f4.css.map"],
+      "js.map": ["/packs/js/application-d823ee45e18ca6648931.js.map"]
     }
   },
   "media/images/affinities-card.svg": "/packs/media/images/affinities-card-47e24f67.svg",
