--- a/public/packs/manifest.json
+++ b/public/packs/manifest.json
@@ -1,17 +1,18 @@
 {
-  "application.js": "/packs/js/application-bfe786bde6a471af061a.js",
-  "application.js.map": "/packs/js/application-bfe786bde6a471af061a.js.map",
+  "application.js": "/packs/js/application-665b0f49d007bcdf5202.js",
+  "application.js.map": "/packs/js/application-665b0f49d007bcdf5202.js.map",
   "entrypoints": {
     "application": {
       "js": [
-        "/packs/js/application-bfe786bde6a471af061a.js"
+        "/packs/js/application-665b0f49d007bcdf5202.js"
       ],
       "js.map": [
-        "/packs/js/application-bfe786bde6a471af061a.js.map"
+        "/packs/js/application-665b0f49d007bcdf5202.js.map"
       ]
     }
   },
   "media/images/affinities-card.svg": "/packs/media/images/affinities-card-47e24f67.svg",
+  "media/images/cancel.svg": "/packs/media/images/cancel-cad70081.svg",
   "media/images/geography-campaign.svg": "/packs/media/images/geography-campaign-3e306e4f.svg",
   "media/images/star_step_1.svg": "/packs/media/images/star_step_1-f6aaa4b2.svg",
   "media/images/star_step_2.svg": "/packs/media/images/star_step_2-0a7de30a.svg",
