Fix react linter issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,6 @@
     "react"
   ],
   "rules": {
+    "no-underscore-dangle": ["error", { "allow": ["foo_", "_bar"], "allowAfterThis": true }]
   }
 }
