--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "plugin:react/recommended",
     "airbnb"
   ],
+  "parser": "@babel/eslint-parser",
   "ignorePatterns": [
     "app/javascript/packs/**",
     "app/javascript/channels/**"
