--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "react"
   ],
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["foo_", "_bar"], "allowAfterThis": true }]
+    "no-underscore-dangle": ["error", { "allow": ["foo_", "_bar"], "allowAfterThis": true }],
+    "sort-keys": ["error", "asc"]
   }
 }
