initial tests setup, added advertiser and camaign controller tests

--- a/test/fixtures/connections.yml
+++ b/test/fixtures/connections.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  user_id: 1
-  token: MyString
-  is_expired: false
+# one:
+#   user_id: 1
+#   token: MyString
+#   is_expired: false
 
-two:
-  user_id: 1
-  token: MyString
-  is_expired: false
+# two:
+#   user_id: 1
+#   token: MyString
+#   is_expired: false
