--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,23 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+agency_user:
+  first_name: John
+  last_name: Smith
+  email: first@agency.com
+  company: first
+  company_type: Agency
+  roles: user
+  confirmed_at: <%= Time.now %>
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+advertiser_user:
+  first_name: Jane
+  last_name: Smith
+  email: first@advertiser.com
+  company: first
+  company_type: Advertiser
+  roles: user
+  confirmed_at: <%= Time.now %>
+
+no_access_user:
+  first_name: John
+  last_name: Doe
+  roles: user
+  confirmed_at: <%= Time.now %>
