--- a/test/fixtures/advertisers.yml
+++ b/test/fixtures/advertisers.yml
@@ -1,13 +1,3 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  name: MyString
-  website: MyString
-  user_id: 1
-  logo_url: MyString
-
-two:
-  name: MyString
-  website: MyString
-  user_id: 1
-  logo_url: MyString
+first:
+  name: Adworks
+  agency: first
