--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,12 +5,31 @@ agency_user:
   company: first
   company_type: Agency
   roles: user
+  encrypted_password: $2a$11$QkvooGDFAyFB5xFsidd8QutcOHIdPBstTPm0/3RXdMdyLNbaYwAsy # => decrypts to 'password'
+  confirmed_at: <%= Time.now %>
+
+second_user_for_agency:
+  first_name: Bill
+  last_name: Smith
+  email: bill@example.com
+  company: first
+  company_type: Agency
+  roles: user
   confirmed_at: <%= Time.now %>
 
 advertiser_user:
   first_name: Jane
   last_name: Smith
   email: first@advertiser.com
+  company: first
+  company_type: Advertiser
+  roles: user
+  confirmed_at: <%= Time.now %>
+
+second_user_for_advertiser:
+  first_name: Jill
+  last_name: Smith
+  email: jill@example.com
   company: first
   company_type: Advertiser
   roles: user
