--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "node": "14.18.3",
+    "node-sass": "6.0.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-table-next": "^4.0.3",
-    "react-checkbox-tree": "^1.6.0",
+    "react-checkbox-tree": "^1.7.2",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-on-rails": "12.0.4",
