--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -27,26 +27,39 @@ jobs:
         uses: ruby/setup-ruby@8f312efe1262fb463d906e9bf040319394c18d3e # v1.92
         with:
           bundler-cache: true
-      # Add or replace database setup steps here
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Yarn Install
+        run: yarn check || bin/rails yarn:install
+
+      - name: Compile Assets
+        run: |
+            if [[ ! -d public/packs-test ]]; then
+              bin/rails webpacker:compile
+            else
+              echo "No need to compile assets."
+            fi
+      # Migrate database
       - name: Set up database schema
-        run: bin/rails db:schema:load
+        run: bin/rails db:migrate RAILS_ENV=test
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake test
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@8f312efe1262fb463d906e9bf040319394c18d3e # v1.92
-        with:
-          bundler-cache: true
-      # Add or replace any other lints here
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
-      - name: Lint Ruby files
-        run: bin/rubocop --parallel
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #     - name: Install Ruby and gems
+  #       uses: ruby/setup-ruby@8f312efe1262fb463d906e9bf040319394c18d3e # v1.92
+  #       with:
+  #         bundler-cache: true
+  #     # Add or replace any other lints here
+  #     - name: Security audit dependencies
+  #       run: bin/bundler-audit --update
+  #     - name: Security audit application code
+  #       run: bin/brakeman -q -w2
+  #     - name: Lint Ruby files
+  #       run: bin/rubocop --parallel
