--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-table-next": "^4.0.3",
-    "react-checkbox-tree": "^1.7.2",
+    "react-checkbox-tree": "1.6",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-on-rails": "12.0.4",
