added desired_dcpm and calculating impressions based on it and budget

--- a/test/fixtures/objectives.yml
+++ b/test/fixtures/objectives.yml
@@ -6,9 +6,7 @@ first:
   budget: 20000
   start_date: <%= Date.yesterday %>
   end_date: <%= Date.tomorrow %>
-  impressions: 24000
-  frequency: 7000
-  unique_reach: 50
+  desired_dcpm: 12000
   objective_notes: Some notes about the objective
 
 second:
@@ -19,9 +17,6 @@ second:
   budget: 5000
   start_date: <%= Date.today - 10.days %>
   end_date: <%= Date.tomorrow %>
-  impressions: 24000
-  frequency: 7000
-  unique_reach: 50
   objective_notes: Some notes about the objective
 
 vcr:
@@ -32,7 +27,6 @@ vcr:
   budget: 10000
   start_date: <%= Date.yesterday %>
   end_date: <%= Date.today + 10.days %>
-  video_plays: 230_000
   video_completion_rate: 48
   objective_notes: Some notes about the objective
 
