--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.4.1",
+    "html5-file-selector": "^2.1.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -25,6 +26,7 @@
     "react-checkbox-tree": "1.6",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-dropzone-uploader": "^2.11.0",
     "react-on-rails": "12.0.4",
     "react-select": "^4.3.0",
     "react-simple-tabs-component": "^2.1.1",
